--- a/studying/Gin框架/03. 日志库/05. 从Viper获取配置信息.md
+++ b/studying/Gin框架/03. 日志库/05. 从Viper获取配置信息.md
@@ -1,2 +1,367 @@
 
 # 从 Viper 获取值
+
+在Viper中，有几种方法可以根据值的类型获取值。存在以下功能和方法:
+
+- `Get(key string) : interface{}`
+- `GetBool(key string) : bool`
+- `GetFloat64(key string) : float64`
+- `GetInt(key string) : int`
+- `GetIntSlice(key string) : []int`
+- `GetString(key string) : string`
+- `GetStringMap(key string) : map[string]interface{}`
+- `GetStringMapString(key string) : map[string]string`
+- `GetStringSlice(key string) : []string`
+- `GetTime(key string) : time.Time`
+- `GetDuration(key string) : time.Duration`
+- `IsSet(key string) : bool`
+- `AllSettings() : map[string]interface{}`
+
+需要认识到的一件重要事情是，每一个Get方法在找不到值的时候都会返回零值。为了检查给定的键是否存在，提供了`IsSet()`方法。
+
+例如：
+
+```go
+viper.GetString("logfile") // 不区分大小写的设置和获取
+if viper.GetBool("verbose") {
+    fmt.Println("verbose enabled")
+}
+```
+
+## 访问嵌套的键
+
+访问器方法也接受深度嵌套键的格式化路径。例如，如果加载下面的JSON文件：
+
+```json
+{
+    "host": {
+        "address": "localhost",
+        "port": 5799
+    },
+    "datastore": {
+        "metric": {
+            "host": "127.0.0.1",
+            "port": 3099
+        },
+        "warehouse": {
+            "host": "198.0.0.1",
+            "port": 2112
+        }
+    }
+}
+```
+
+Viper可以通过传入`.`分隔的路径来访问嵌套字段：
+
+```go
+GetString("datastore.metric.host") // (返回 "127.0.0.1")
+```
+
+这遵守上面建立的优先规则；搜索路径将遍历其余配置注册表，直到找到为止。(译注：因为Viper支持从多种配置来源，例如磁盘上的配置文件>命令行标志位>环境变量>远程Key/Value存储>默认值，我们在查找一个配置的时候如果在当前配置源中没找到，就会继续从后续的配置源查找，直到找到为止。)
+
+例如，在给定此配置文件的情况下，`datastore.metric.host`和`datastore.metric.port`均已定义（并且可以被覆盖）。如果另外在默认值中定义了`datastore.metric.protocol`，Viper也会找到它。
+
+然而，如果`datastore.metric`被直接赋值覆盖（被flag，环境变量，`set()`方法等等…），那么`datastore.metric`的所有子键都将变为未定义状态，它们被高优先级配置级别“遮蔽”（shadowed）了。
+
+最后，如果存在与分隔的键路径匹配的键，则返回其值。例如：
+
+```go
+{
+    "datastore.metric.host": "0.0.0.0",
+    "host": {
+        "address": "localhost",
+        "port": 5799
+    },
+    "datastore": {
+        "metric": {
+            "host": "127.0.0.1",
+            "port": 3099
+        },
+        "warehouse": {
+            "host": "198.0.0.1",
+            "port": 2112
+        }
+    }
+}
+
+GetString("datastore.metric.host") // 返回 "0.0.0.0"
+```
+
+## 提取子树
+
+从Viper中提取子树。
+
+例如，`viper`实例现在代表了以下配置：
+
+```yaml
+app:
+  cache1:
+    max-items: 100
+    item-size: 64
+  cache2:
+    max-items: 200
+    item-size: 80
+```
+
+执行后：
+
+```go
+subv := viper.Sub("app.cache1")
+```
+
+`subv`现在就代表：
+
+```yaml
+max-items: 100
+item-size: 64
+```
+
+假设我们现在有这么一个函数：
+
+```go
+func NewCache(cfg *Viper) *Cache {...}
+```
+
+它基于`subv`格式的配置信息创建缓存。现在，可以轻松地分别创建这两个缓存，如下所示：
+
+```go
+cfg1 := viper.Sub("app.cache1")
+cache1 := NewCache(cfg1)
+
+cfg2 := viper.Sub("app.cache2")
+cache2 := NewCache(cfg2)
+```
+
+## 反序列化
+
+你还可以选择将所有或特定的值解析到结构体、map等。
+
+有两种方法可以做到这一点：
+
+- `Unmarshal(rawVal interface{}) : error`
+- `UnmarshalKey(key string, rawVal interface{}) : error`
+
+举个例子：
+
+```go
+type config struct {
+	Port int
+	Name string
+	PathMap string `mapstructure:"path_map"`
+}
+
+var C config
+
+err := viper.Unmarshal(&C)
+if err != nil {
+	t.Fatalf("unable to decode into struct, %v", err)
+}
+```
+
+如果你想要解析那些键本身就包含`.`(默认的键分隔符）的配置，你需要修改分隔符：
+
+```go
+v := viper.NewWithOptions(viper.KeyDelimiter("::"))
+
+v.SetDefault("chart::values", map[string]interface{}{
+    "ingress": map[string]interface{}{
+        "annotations": map[string]interface{}{
+            "traefik.frontend.rule.type":                 "PathPrefix",
+            "traefik.ingress.kubernetes.io/ssl-redirect": "true",
+        },
+    },
+})
+
+type config struct {
+	Chart struct{
+        Values map[string]interface{}
+    }
+}
+
+var C config
+
+v.Unmarshal(&C)
+```
+
+Viper还支持解析到嵌入的结构体：
+
+```go
+/*
+Example config:
+
+module:
+    enabled: true
+    token: 89h3f98hbwf987h3f98wenf89ehf
+*/
+type config struct {
+	Module struct {
+		Enabled bool
+
+		moduleConfig `mapstructure:",squash"`
+	}
+}
+
+// moduleConfig could be in a module specific package
+type moduleConfig struct {
+	Token string
+}
+
+var C config
+
+err := viper.Unmarshal(&C)
+if err != nil {
+	t.Fatalf("unable to decode into struct, %v", err)
+}
+```
+
+Viper在后台使用[github.com/mitchellh/mapstructure](https://github.com/mitchellh/mapstructure)来解析值，其默认情况下使用`mapstructure`tag。
+
+**注意** <font color=red>当我们需要将viper读取的配置反序列到我们定义的结构体变量中时，一定要使用`mapstructure`tag哦！</font>
+
+## 序列化成字符串
+
+你可能需要将viper中保存的所有设置序列化到一个字符串中，而不是将它们写入到一个文件中。你可以将自己喜欢的格式的序列化器与`AllSettings()`返回的配置一起使用。
+
+```go
+import (
+    yaml "gopkg.in/yaml.v2"
+    // ...
+)
+
+func yamlStringSettings() string {
+    c := viper.AllSettings()
+    bs, err := yaml.Marshal(c)
+    if err != nil {
+        log.Fatalf("unable to marshal config to YAML: %v", err)
+    }
+    return string(bs)
+}
+```
+# 使用单个还是多个Viper实例?
+
+Viper是开箱即用的。你不需要配置或初始化即可开始使用Viper。由于大多数应用程序都希望使用单个中央存储库管理它们的配置信息，所以viper包提供了这个功能。它类似于单例模式。
+
+在上面的所有示例中，它们都以其单例风格的方法演示了如何使用viper。
+
+## 使用多个viper实例
+
+你还可以在应用程序中创建许多不同的viper实例。每个都有自己独特的一组配置和值。每个人都可以从不同的配置文件，key value存储区等读取数据。每个都可以从不同的配置文件、键值存储等中读取。viper包支持的所有功能都被镜像为viper实例的方法。
+
+例如：
+
+```go
+x := viper.New()
+y := viper.New()
+
+x.SetDefault("ContentDir", "content")
+y.SetDefault("ContentDir", "foobar")
+
+//...
+```
+
+当使用多个viper实例时，由用户来管理不同的viper实例。
+
+# 使用Viper示例
+
+假设我们的项目现在有一个`./conf/config.yaml`配置文件，内容如下：
+
+```yaml
+port: 8123
+version: "v1.2.3"
+```
+
+接下来通过示例代码演示两种在项目中使用`viper`管理项目配置信息的方式。
+
+## 直接使用viper管理配置
+
+这里用一个demo演示如何在gin框架搭建的web项目中使用`viper`，使用viper加载配置文件中的信息，并在代码中直接使用`viper.GetXXX()`方法获取对应的配置值。
+
+```go
+package main
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/spf13/viper"
+)
+
+func main() {
+	viper.SetConfigFile("./conf/config.yaml") // 指定配置文件路径
+	err := viper.ReadInConfig()        // 读取配置信息
+	if err != nil {                    // 读取配置信息失败
+		panic(fmt.Errorf("Fatal error config file: %s \n", err))
+	}
+
+	// 监控配置文件变化
+	viper.WatchConfig()
+
+	r := gin.Default()
+	// 访问/version的返回值会随配置文件的变化而变化
+	r.GET("/version", func(c *gin.Context) {
+		c.String(http.StatusOK, viper.GetString("version"))
+	})
+
+	if err := r.Run(
+		fmt.Sprintf(":%d", viper.GetInt("port"))); err != nil {
+		panic(err)
+	}
+}
+```
+
+## 使用结构体变量保存配置信息
+
+除了上面的用法外，我们还可以在项目中定义与配置文件对应的结构体，`viper`加载完配置信息后使用结构体变量保存配置信息。
+
+```go
+package main
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/fsnotify/fsnotify"
+
+	"github.com/gin-gonic/gin"
+	"github.com/spf13/viper"
+)
+
+type Config struct {
+	Port    int    `mapstructure:"port"`
+	Version string `mapstructure:"version"`
+}
+
+var Conf = new(Config)
+
+func main() {
+	viper.SetConfigFile("./conf/config.yaml") // 指定配置文件路径
+	err := viper.ReadInConfig()               // 读取配置信息
+	if err != nil {                           // 读取配置信息失败
+		panic(fmt.Errorf("Fatal error config file: %s \n", err))
+	}
+	// 将读取的配置信息保存至全局变量Conf
+	if err := viper.Unmarshal(Conf); err != nil {
+		panic(fmt.Errorf("unmarshal conf failed, err:%s \n", err))
+	}
+	// 监控配置文件变化
+	viper.WatchConfig()
+	// 注意！！！配置文件发生变化后要同步到全局变量Conf
+	viper.OnConfigChange(func(in fsnotify.Event) {
+		fmt.Println("夭寿啦~配置文件被人修改啦...")
+		if err := viper.Unmarshal(Conf); err != nil {
+			panic(fmt.Errorf("unmarshal conf failed, err:%s \n", err))
+		}
+	})
+
+	r := gin.Default()
+	// 访问/version的返回值会随配置文件的变化而变化
+	r.GET("/version", func(c *gin.Context) {
+		c.String(http.StatusOK, Conf.Version)
+	})
+
+	if err := r.Run(fmt.Sprintf(":%d", Conf.Port)); err != nil {
+		panic(err)
+	}
+}
+```
