--- a/studying/前端/CSS/01. flexbox.md
+++ b/studying/前端/CSS/01. flexbox.md
@@ -121,3 +121,98 @@ Now let’s align the items again and examine a couple of the other properties m
 
 ### align-items:
 
+The alignment on the cross-axis is done with the help of this property. Let's change the value for it to "flex-end"
+
+CSS:
+~~~css
+.flex.container{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: flex-end;
+}
+~~~
+Output:
+![img](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/3VPeiAOETRST3ogDhC0U2A_3c6e7af5e29b47e588a71d07671735e1_Picture7.png?expiry=1712361600000&hmac=PDwaJVl7kZ29_F8tR0vuUqKyoji6wjc5elukezj5GMg)
+
+The term 'end' refers to the right side of the page as the left side is seen as the beginning
+
+### align-self
+
+This property can be used on individual items inside the flex.
+~~~css
+.flex-container{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: flex-end;
+}
+.box3{
+	background-color: blanchedalmond;
+	align-self: center;
+}
+~~~
+Output:
+![img](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/mm3YQNF-TnWt2EDRft51kg_2ae1f658e0c24967bd8fbfe6e00443e1_Picture8.png?expiry=1712361600000&hmac=_DhzaolgC02cKOjhiRgTzKxsfBIq3o80AOWZEKwQibA)
+
+Here the color and alignment of the third box have been changed and it overrides the properties set using align-items.
+
+### gap:
+
+gap property can be used to create space between the items along the main axis. You can also individually configure the gaps in rows and columns using row-gap and column-gap properties.
+
+~~~css
+.flex-container{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: flex-end;
+	gap: 10px;
+}
+.box3{
+    background-color: blanchedalmond;
+    align-self: center;
+}
+~~~
+Output:
+![img](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/ztkm6NUSQ9iZJujVEiPYHg_90b99e4f7a584b28ae59c926b9b513e1_Picture9.png?expiry=1712361600000&hmac=Mo6Y9p6Ri74j6NCfislyGyer8ZqZZGCnQbeRG6XK3Jg)
+
+There is a clear change in spacing between the items.
+
+### flex-grow, flex-shrink and flex-basis.
+
+Together these determine how the flex takes up space, grows or shrinks according to the space available.
+
+These are the sub-properties of a property called flex. Together all three properties can also be given values with the help of something called the shorthand notation in CSS. Shorthand notation helps you make your code compact and also easy to write and follow. The values left empty in shorthand notation are given their default values.
+
+For example:
+~~~css
+.flex-container{
+	flex: 0 1 auto;
+}
+~~~
+the flex-grow set to 0, flex-shrink to 1 and flex-basis to auto.
+
+The flex-basis sets the initial size of the container. 
+and together they define the rigidity or flexibility and dynamism you want to add to the flexbox.
+
+Output:
+![img](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/yEoMipglQMyKDIqYJWDMmA_e9e7e0fe3299407eaf95742f32e6eee1_Picture10.png?expiry=1712361600000&hmac=5iU_Oiw69Qbz3XFalq6qYCoT5oha5J2A9ddFikBqWFo)
+
+The rest of the remaining code is unchanged. However, the output will change if the code is modified with the addition of the flex property inside the flex item box3 class.
+
+~~~css
+.box3{
+    background-color: blanchedalmond;
+    align-self: center;
+    flex: 1 1 auto;
+}
+~~~
+Output:
+![img](https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/46TFyd29TLukxcndvZy7Tg_f0c1fe9ee37a45438aa31fb8cb871be1_Picture11.png?expiry=1712361600000&hmac=05C0gQiKjpjZYYu4-i70-bVo7LlvLDlfgubxIpA8n3w)
+
+The third box now takes up the entire free space available because flex-growth’s value has been set to 1.
+
+So if we have flex-grow set to 1, the children will all set to equal size. And if one of the children has a value of 1.5, that child would take up more space as compared to the others.
