Update 09. CSS keyframes.md

--- a/studying/前端/CSS/09. CSS keyframes.md
+++ b/studying/前端/CSS/09. CSS keyframes.md
@@ -88,3 +88,32 @@ body{
 ~~~
 
 
+In the example, the width of the object changes from 50 pixels to 100 pixels over a span of 3 seconds and loops infinitely afterward.
+
+This is a very simple example of how you can use the animation property with the help of @keyframes rule to create your desired animation.
+
+If you modify this code and change the animation rules to percentages, it will have the same output.
+
+~~~css
+@keyframes myanimation{
+	0%{width: 50px;
+	}
+	
+	100%{width: 100px;
+}
+~~~
+
+Now, let’s add an intermediary step at 50%.
+
+~~~css
+@keyframes myanimation{
+	0%{width: 50px;
+	}
+	
+	50%{background-color: aquamarine;
+	    height: 20px;
+	}
+	
+	100%{width: 100px;
+}
+~~~
